force-app/main/default/objects/CCC_Job__c/CCC_Job__c.object-meta.xml
<CustomObject>
    <description>Objeto customizado para armazenar dados de jobs CCC.</description>
    <label>CCC Job</label>
    <nameField>
        <displayFormat>JOB-{00000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCC Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>