force-app/main/default/objects/CCC_Job__c/fields/AcceptedAt__c.field-meta.xml
<CustomField>
    <fullName>AcceptedAt__c</fullName>
    <label>Accepted At</label>
    <type>DateTime</type>
</CustomField>