force-app/main/default/objects/CCC_Job__c/fields/AllChunksReceived__c.field-meta.xml
<CustomField>
    <fullName>AllChunksReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Chunks Received</label>
    <type>Checkbox</type>
</CustomField>