force-app/main/default/objects/CCC_Job__c/fields/ChunksReceivedSoFar__c.field-meta.xml
<CustomField>
    <fullName>ChunksReceivedSoFar__c</fullName>
    <label>Chunks Received So Far</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>