force-app/main/default/objects/CCC_Job__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Correlation Id</label>
    <referenceTo>CCC_Job__c</referenceTo>
    <relationshipLabel>CCC Jobs</relationshipLabel>
    <relationshipName>CCCJobs</relationshipName>
    <type>Lookup</type>
</CustomField>