force-app/main/default/objects/CCC_Job__c/fields/ErrorDetails__c.field-meta.xml
<CustomField>
    <fullName>ErrorDetails__c</fullName>
    <label>Error Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>