force-app/main/default/objects/CCC_Job__c/fields/ErrorTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ErrorTimestamp__c</fullName>
    <label>Error Timestamp</label>
    <type>DateTime</type>
</CustomField>