force-app/main/default/objects/CCC_Job__c/fields/EstimatedCompletion__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCompletion__c</fullName>
    <label>Estimated Completion</label>
    <type>DateTime</type>
</CustomField>