force-app/main/default/objects/CCC_Job__c/fields/IsLast__c.field-meta.xml
<CustomField>
    <fullName>IsLast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Last</label>
    <type>Checkbox</type>
</CustomField>