force-app/main/default/objects/CCC_Job__c/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <label>Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>