force-app/main/default/objects/CCC_Job__c/fields/ItemsAccepted__c.field-meta.xml
<CustomField>
    <fullName>ItemsAccepted__c</fullName>
    <label>Items Accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>