force-app/main/default/objects/CCC_Job__c/fields/ItemsRejected__c.field-meta.xml
<CustomField>
    <fullName>ItemsRejected__c</fullName>
    <label>Items Rejected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>