force-app/main/default/objects/CCC_Job__c/fields/RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Requested CCC Jobs</relationshipLabel>
    <relationshipName>RequestedCCCJobs</relationshipName>
    <type>Lookup</type>
</CustomField>