force-app/main/default/objects/CCC_Job__c/fields/TotalSequences__c.field-meta.xml
<CustomField>
    <fullName>TotalSequences__c</fullName>
    <label>Total Sequences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>